samples/_failures_safe/1761481020_5ed3a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81977399.c: In function ‘main’:
./samples/SAFE/__tmp_81977399.c:127:22: error: expected ‘;’ at end of input
  127 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_81977399.c:127:5: error: expected declaration or statement at end of input
  127 |     for (int i = 0; i
      |     ^~~
